firebase issues fixed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,16 @@
     "paths": {
       "@/*": [
         "./*"
-      ]
-    }
+      ],
+      "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"],
+    },
+    "skipLibCheck": true
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+  ],
+  
 }
